# Beast

./: CMakeLists.txt  Doxyfile  Doxyfile.in  main.cpp
Beast/: Beast.cpp  Beast.h  CMakeLists.txt  QuineMcCluskey.cpp
Beast/include/Beast/: Beast.h
unit-test/: TestClause.cpp
